fixing spacing in register, finish register for pies, fix tooltip for pies

--- a/css/px-vis-register.css
+++ b/css/px-vis-register.css
@@ -645,6 +645,9 @@ a {
     height: 2rem;
     margin-top: 0.2rem; }
 
+.full-width {
+  width: 100%; }
+
 /*------------------------------------*    #PX-META-BUTTONS-DESIGN
 \*------------------------------------*/
 .btn {
