--- a/sass/px-vis-register-sketch.scss
+++ b/sass/px-vis-register-sketch.scss
@@ -89,7 +89,7 @@ $series-time-spacing:   $inuit-base-spacing-unit * 2 / 3;
   }
 }
 
-.max-width {
+.full-width {
   width: 100%;
 }
 
